# gnome-calendar-mcp

./: README.md  pyproject.toml
src/gnome_calendar_mcp/: gcal.py  server.py
